--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,9 @@ jobs:
       shell: bash
 
     - name: Build with Gradle
-      run: ./gradlew bootJar
+      run: |
+           chmod +x ./gradlew
+            ./gradlew clean build -x test
 
     ## 도커 이미지 빌드 후 도커허브에 push하기
     - name: web docker build and push
