--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,11 +59,12 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.HOST }}
-        username: ubuntu
-        key: ${{ secrets.KEY }}
-        port: 22
-        script: |
-          sudo docker image rm ${{ secrets.DOCKER_REPO }}
-          sudo docker pull ${{ secrets.DOCKER_REPO }}
-          sudo docker run -d -p 80:8080 ${{ secrets.DOCKER_REPO }}
+         host: ${{ secrets.HOST }}
+         username: ubuntu
+         key: ${{ secrets.KEY }}
+         envs: GITHUB_SHA
+         script: |
+           sudo docker rm -f $(docker ps -qa)
+           sudo docker pull ${{ secrets.DOCKER_REPO }}/directors-dev
+           docker-compose up -d
+           docker image prune -f
