--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,12 +1,6 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
+name: Java CI with Gradle
 
-name: Java CI with Gradle # workflow 이름
-
+# 동작 조건 설정 : develop 브랜치에 push 혹은 pull request가 발생할 경우 동작한다.
 on:
   push:
     branches: [ "develop" ]
@@ -15,56 +9,35 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  # Spring Boot 애플리케이션을 빌드하여 도커허브에 푸시하는 과정
+  build-docker-image:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
+    # 1. Java 17 세팅
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-        architecture: x64
 
-    - name: make application.yml
-      run: |
-        # create application.yml
-        cd ./src/main
-        mkdir resources
-        cd ./resources
-
-        # application.yml 파일 생성하기
-        touch ./application.yml
-
-        # Secrets에 저장한 값을 application.yml 파일에 쓰기
-        echo "${{ secrets.DATABASE }}" >> ./application.yml
-
-      shell: bash
-
+    # 2. Spring Boot 애플리케이션 빌드
     - name: Build with Gradle
-      run: |
-           chmod +x ./gradlew
-            ./gradlew clean build -x test
-
-    ## 도커 이미지 빌드 후 도커허브에 push하기
-    - name: web docker build and push
-      run: |
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker build -t ${{ secrets.DOCKER_REPO }} .
-        docker push ${{ secrets.DOCKER_REPO }}
-         
-    ## 서버에 접속하여 도커 이미지를 pull 받고 실행하기
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@master
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-         host: ${{ secrets.HOST }}
-         username: ubuntu
-         key: ${{ secrets.KEY }}
-         envs: GITHUB_SHA
-         script: |
-           sudo docker rm -f $(docker ps -qa)
-           sudo docker pull ${{ secrets.DOCKER_REPO }}
-           docker-compose up -d
-           docker image prune -f
+        arguments: clean bootJar
+
+    # 3. Docker 이미지 빌드
+    - name: docker image build
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/github-actions-demo .
+
+    # 4. DockerHub 로그인
+    - name: docker login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # 5. Docker Hub 이미지 푸시
+    - name: docker Hub push
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/github-actions-demo
