--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,11 @@
-name: Java CI with Gradle
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
+
+name: Java CI with Gradle # workflow 이름
 
 on:
   push:
@@ -8,31 +15,57 @@ permissions:
   contents: read
 
 jobs:
-  # Spring Boot 애플리케이션을 빌드하여 도커허브에 푸시하는 과정
-  build-docker-image:
+  build:
+
     runs-on: ubuntu-latest
 
-	... 생략
-
-  # 위 과정에서 푸시한 이미지를 ec2에서 풀받아서 실행시키는 과정 
-  run-docker-image-on-ec2:
-    # build-docker-image (위)과정이 완료되어야 실행됩니다.
-    needs: build-docker-image
-    runs-on: self-hosted
-
     steps:
-      # 1. 최신 이미지를 풀받습니다
-      - name: docker pull
-        run: sudo docker pull ${{ secrets.DOCKER_USERNAME }}/github-actions-demo
-      
-      # 2. 기존의 컨테이너를 중지시킵니다
-      - name: docker stop container
-        run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        architecture: x64
 
-      # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
-      - name: docker run new container
-        run: sudo docker run --name github-actions-demo --rm -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/github-actions-demo
+    - name: make application.yml
+      run: |
+        # create application.yml
+        cd ./src/main
+        mkdir resources
+        cd ./resources
 
-      # 4. 미사용 이미지를 정리합니다
-      - name: delete old docker image
-        run: sudo docker system prune -f
+        # application.yml 파일 생성하기
+        touch ./application.yml
+
+        # Secrets에 저장한 값을 application.yml 파일에 쓰기
+        echo "${{ secrets.DATABASE }}" >> ./application.yml
+
+      shell: bash
+
+    - name: Build with Gradle
+			run: |
+          chmod +x ./gradlew
+          ./gradlew clean build -x test
+
+    ## 도커 이미지 빌드 후 도커허브에 push하기
+    - name: web docker build and push
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker build -t ${{ secrets.DOCKER_REPO }} .
+        docker push ${{ secrets.DOCKER_REPO }}
+         
+    ## 서버에 접속하여 도커 이미지를 pull 받고 실행하기
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v0.1.6
+      with:
+        host: ${{ secrets.HOST }}
+        username: ubuntu
+        key: ${{ secrets.KEY }}
+        port: 22
+        script: |
+          sudo docker stop prod-server
+          sudo docker rm prod-server
+          sudo docker image rm ${{ secrets.DOCKER_REPO }}
+          sudo docker pull ${{ secrets.DOCKER_REPO }}
+          sudo docker run -d -p 80:8080 ${{ secrets.DOCKER_REPO }}
