--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle # workflow 이름
+name: Java CI/CD with Gradle # workflow 이름
 
 on:
   push:
@@ -38,7 +38,7 @@ jobs:
         touch ./application.yml
 
         # Secrets에 저장한 값을 application.yml 파일에 쓰기
-        echo "${{ secrets.DATABASE }}" >> ./application.yml
+        echo "${{ secrets.YML }}" >> ./application.yml
 
       shell: bash
 
@@ -55,14 +55,15 @@ jobs:
         docker push ${{ secrets.DOCKER_REPO }}
          
     ## 서버에 접속하여 도커 이미지를 pull 받고 실행하기
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@v0.1.6
+    - name: Deploy to server
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ubuntu
         key: ${{ secrets.KEY }}
         port: 22
         script: |
-          sudo docker image rm ${{ secrets.DOCKER_REPO }}
+          sudo docker rm -f $(docker ps -qa)
           sudo docker pull ${{ secrets.DOCKER_REPO }}
-          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_REPO }}
+          docker-compose up -d
+          docker image prune -f
