--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3" # 버전 지정
 services: # 컨테이너 설정
   backend:
     container_name: flory-backend
-    image: zerobibim/flory
+    image: kimjunseok/flory
     expose:
       - 8080
     ports:
