--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -65,5 +65,5 @@ jobs:
         script: |
           sudo docker rm -f $(sudo docker ps -qa)
           sudo docker pull ${{ secrets.DOCKER_REPO }}
-          docker-compose up -d
+          docker-compose -f ./docker-compose.yml up -d
           docker image prune -f
