--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 
 	// swagger
 	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")
+
+	//web3j
+	implementation 'org.web3j:core:4.9.6'
+
+
 }
 
 tasks.named('test') {
