--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,6 +63,7 @@ jobs:
         key: ${{ secrets.KEY }}
         port: 22
         script: |
+          sudo docker stop $(sudo docker ps -qa)
           sudo docker rm -f $(sudo docker ps -qa)
           sudo docker pull ${{ secrets.DOCKER_REPO }}
           docker-compose up -d
