--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,10 +63,7 @@ jobs:
         key: ${{ secrets.KEY }}
         port: 22
         script: |
-          sudo docker stop $(sudo docker ps -qa)
-          containers=$(sudo docker ps -qa)
-          if [ -n "$containers" ]; then
-            sudo docker rm -f $containers
+          sudo docker-compose down
           sudo docker pull ${{ secrets.DOCKER_REPO }}
-          docker-compose up -d
-          docker image prune -f
+          sudo docker-compose up -d
+          sudo docker image prune -f
